--- a/Yukari/src/main/res/values/styles.xml
+++ b/Yukari/src/main/res/values/styles.xml
@@ -35,6 +35,7 @@
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@drawable/preview_bg</item>
         <item name="android:progressBarStyleHorizontal">@style/ProgressBarTranslucentBGTheme</item>
+        <item name="tweetTextColor">#000</item>
     </style>
 
     <style name="AppDialogThemeWhenLarge" parent="YukariLightTheme"/>
