--- a/Yukari/src/main/res/values-v11/styles.xml
+++ b/Yukari/src/main/res/values-v11/styles.xml
@@ -28,6 +28,12 @@
         <item name="tweetTextColor">#000</item>
     </style>
 
+    <style name="AppThemeTranslucent.Dark" parent="android:Theme.Holo.NoActionBar" tools:ignore="NewApi">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="tweetTextColor">#000</item>
+    </style>
+
     <style name="AppThemeTranslucentBg" parent="android:Theme.Holo.Light.NoActionBar" tools:ignore="NewApi">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@drawable/preview_bg</item>
