--- a/YukariProject/Yukari/src/main/res/values/integer.xml
+++ b/YukariProject/Yukari/src/main/res/values/integer.xml
@@ -5,4 +5,6 @@
     <integer name="notification_retweeted">3</integer>
     <integer name="notification_replied">4</integer>
     <integer name="notification_message">5</integer>
+
+    <integer name="grid_columns_num">3</integer>
 </resources>
