--- a/YukariProject/Yukari/src/main/res/values-v14/styles_yukaritheme.xml
+++ b/YukariProject/Yukari/src/main/res/values-v14/styles_yukaritheme.xml
@@ -7,6 +7,7 @@
         <item name="android:background">@drawable/key_color</item>
         <item name="android:backgroundSplit">@drawable/key_color</item>
         <item name="android:titleTextStyle">@style/ActionBarYukariTheme.TitleText</item>
+        <item name="android:subtitleTextStyle">@style/ActionBarYukariTheme.SubTitleText</item>
     </style>
 
 </resources>
