--- a/YukariProject/Yukari/src/main/res/xml/pref.xml
+++ b/YukariProject/Yukari/src/main/res/xml/pref.xml
@@ -112,6 +112,11 @@
     </PreferenceCategory>
 
     <PreferenceCategory android:title="投稿設定">
+        <CheckBoxPreference
+            android:key="pref_use_binded_user"
+            android:title="タブのアカウントを使う"
+            android:summary="表示中のタブに紐付いたアカウントが選ばれた状態で投稿画面を開きます\nマルチタイムラインと検索では機能しません"
+            android:defaultValue="false"/>
         <ListPreference
             android:key="pref_upload_size"
             android:title="アップロード画像の圧縮"
