--- a/YukariProject/Yukari/src/main/res/layout/activity_main.xml
+++ b/YukariProject/Yukari/src/main/res/layout/activity_main.xml
@@ -1,72 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.v4.view.ViewPager
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
         android:id="@+id/pager"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/llTweetGuide"
-        android:layout_alignEnd="@+id/llTweetGuide">
-    </android.support.v4.view.ViewPager>
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"></android.support.v4.view.ViewPager>
 
     <FrameLayout
-            android:layout_width="fill_parent"
-            android:layout_height="@dimen/mainfooter_height"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:id="@+id/tweetgesture"
-            android:background="@drawable/status_bar_color">
+        android:id="@+id/tweetgesture"
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/mainfooter_height"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/status_bar_color">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="fill_parent"
+            android:orientation="horizontal">
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tvStreamStates"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="▶"
-                    android:textColor="@android:color/primary_text_light"
-                    android:id="@+id/tvStreamStates"
                     android:layout_gravity="center_vertical"
-                    android:paddingLeft="4dp" />
+                    android:paddingLeft="4dp"
+                    android:text="▶"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@android:color/primary_text_light" />
 
                 <TextView
+                    android:id="@+id/tvMainTab"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:id="@+id/tvMainTab"
-                    android:textColor="@android:color/primary_text_light"
-                    android:scrollHorizontally="true"
-                    android:ellipsize="end"
-                    android:maxLines="1"
                     android:layout_gravity="center_vertical"
-                    android:paddingLeft="6dp"
-                    android:focusable="true"
+                    android:background="@drawable/selector_key_background"
                     android:clickable="true"
-                    android:paddingTop="4dp"
+                    android:ellipsize="end"
+                    android:focusable="true"
+                    android:maxLines="1"
                     android:paddingBottom="4dp"
-                    android:background="@drawable/selector_key_background" />
+                    android:paddingLeft="6dp"
+                    android:paddingTop="4dp"
+                    android:scrollHorizontally="true"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@android:color/primary_text_light" />
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="match_parent"
@@ -74,111 +73,111 @@
                     android:layout_weight="5" />
 
                 <ImageButton
-                    android:layout_width="@dimen/mainfooter_button_width"
-                    android:layout_height="match_parent"
                     android:id="@+id/ibStream"
+                    android:layout_width="@dimen/mainfooter_button_width"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:background="@drawable/selector_key_background"
+                    android:focusable="false"
                     android:src="@drawable/ic_play"
-                    android:layout_weight="2"
-                    android:focusable="false"
-                    android:visibility="invisible"
-                    android:background="@drawable/selector_key_background"/>
+                    android:visibility="invisible" />
 
                 <ImageButton
-                    android:layout_width="@dimen/mainfooter_button_width"
-                    android:layout_height="match_parent"
                     android:id="@+id/ibClose"
+                    android:layout_width="@dimen/mainfooter_button_width"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:background="@drawable/selector_key_background"
+                    android:focusable="false"
                     android:src="@drawable/ic_close"
-                    android:layout_weight="2"
-                    android:focusable="false"
-                    android:visibility="invisible"
-                    android:background="@drawable/selector_key_background"/>
+                    android:visibility="invisible" />
 
                 <ImageButton
-                    android:layout_width="@dimen/mainfooter_button_width"
-                    android:layout_height="match_parent"
                     android:id="@+id/ibSearch"
-                    android:src="@drawable/ic_search"
-                    android:layout_weight="2"
-                    android:focusable="false"
-                    android:background="@drawable/selector_key_background"/>
-
-                <ImageButton
                     android:layout_width="@dimen/mainfooter_button_width"
                     android:layout_height="match_parent"
-                    android:id="@+id/ibMenu"
-                    android:src="@drawable/ic_action_overflow"
                     android:layout_weight="2"
+                    android:background="@drawable/selector_key_background"
                     android:focusable="false"
-                    android:background="@drawable/selector_key_background"/>
+                    android:src="@drawable/ic_search" />
+
+                <ImageButton
+                    android:id="@+id/ibMenu"
+                    android:layout_width="@dimen/mainfooter_button_width"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:background="@drawable/selector_key_background"
+                    android:focusable="false"
+                    android:src="@drawable/ic_action_overflow" />
             </LinearLayout>
         </LinearLayout>
     </FrameLayout>
 
     <LinearLayout
         android:id="@+id/llQuickTweet"
-        android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:layout_alignTop="@+id/tweetgesture"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/tweetgesture"
+        android:layout_marginRight="@dimen/mainfooter_height"
         android:background="@drawable/key_color"
-        android:visibility="gone"
-        android:layout_marginRight="@dimen/mainfooter_height">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <ImageButton
+            android:id="@+id/ibCloseTweet"
             android:layout_width="38dp"
             android:layout_height="match_parent"
-            android:id="@+id/ibCloseTweet"
-            android:src="@drawable/ic_close"
             android:background="@drawable/selector_key_background"
-            android:paddingRight="4dp"/>
+            android:paddingRight="4dp"
+            android:src="@drawable/ic_close" />
 
         <ImageButton
+            android:id="@+id/ibAccount"
             android:layout_width="32dp"
             android:layout_height="match_parent"
-            android:id="@+id/ibAccount"
             android:layout_gravity="center_vertical"
             android:background="@drawable/selector_key_background"
             android:scaleType="centerInside"
             android:src="@drawable/yukatterload" />
 
         <EditText
+            android:id="@+id/etTweetInput"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/etTweetInput"
             android:layout_weight="1"
             android:paddingLeft="8dp"
-            android:textSize="18sp"
-            android:singleLine="true"/>
+            android:singleLine="true"
+            android:textSize="18sp" />
 
         <ImageButton
+            android:id="@+id/ibTweet"
             android:layout_width="48dp"
             android:layout_height="match_parent"
-            android:id="@+id/ibTweet"
-            android:src="@drawable/ic_prof_tweets"
-            android:background="@drawable/selector_key_background" />
+            android:background="@drawable/selector_key_background"
+            android:src="@drawable/ic_prof_tweets" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/llTweetGuide"
-        android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/llQuickTweet"
-        android:layout_marginTop="162dp"
         android:layout_above="@+id/tweetgesture"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:background="@drawable/rect_transbox"
+        android:layout_below="@+id/llQuickTweet"
+        android:layout_marginBottom="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginTop="162dp"
+        android:background="@drawable/rect_transbox"
+        android:orientation="horizontal"
         android:padding="6dp">
 
         <ImageView
@@ -186,14 +185,30 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_prof_tweets" />
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="紫のバーを上に向かってスライドするとツイート画面が開きます。"
-            android:textColor="#000"
+            android:layout_marginLeft="2dp"
             android:layout_marginTop="2dp"
-            android:layout_marginLeft="2dp" />
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="2dp"
+                android:text="紫のバーを上に向かってスライドするとツイート画面が開きます。"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#000" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:text="(一度でもツイートするとこの案内は消えます)"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+        </LinearLayout>
     </LinearLayout>
 
     <FrameLayout
@@ -201,21 +216,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/tweetgesture"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:visibility="gone"
-        android:background="@drawable/status_bar_color">
+        android:layout_alignParentRight="true"
+        android:background="@drawable/status_bar_color"
+        android:visibility="gone">
 
         <ImageView
+            android:id="@+id/ivTweet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/ivTweet"
             android:layout_above="@+id/tweetgesture"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_prof_tweets"
+            android:layout_alignParentRight="true"
             android:background="@drawable/selector_key_background"
-            android:padding="@dimen/mainfooter_tweet_button" />
+            android:padding="@dimen/mainfooter_tweet_button"
+            android:src="@drawable/ic_prof_tweets" />
 
         <ImageView
             android:layout_width="match_parent"
